# atlas-vis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/atlas_vis/: __init__.py  main.py
src/atlas_vis/config/: default_settings.yaml
src/atlas_vis/core/: config.py  exceptions.py  mapping_cache.py  scanner.py
src/atlas_vis/parsers/: __init__.py  aliases.py  base.py  mapper.py  pandas.py  registry.py  tif.py  util.py
src/atlas_vis/physics/: formulas.py  graph.py  registry.py
src/atlas_vis/processing/: dask_manager.py  transformer.py
src/atlas_vis/visualization/: engine.py  trame_server.py
