[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "atlas_vis"
version = "0.1.0"
description = "High-performance out-of-core meteorological visualization framework utilizing PyVista, Trame, Dask, PyProj, and Xarray."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AtlasVis Core Engineering Team", email = "engineering@atlasvis.local" }]
dependencies = [
    "xarray>=2023.1.0",
    "dask[complete]>=2023.1.0",
    "xwrf>=0.2.0",
    "pyvista[all,jupyter]>=0.40.0",
    "pint-array>=0.6.0",
    "platformdirs>=3.0.0",
    "psutil>=5.9.0",
    "pyproj>=3.5.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0.0",
    "anyio>=3.7.0",
    "ujson>=5.8.0",
    "PyYAML>=6.0",
    "metpy>=1.5.0",
    "trame>=3.0.0",
    "trame-vuetify>=2.0.0",
    "trame-vtk>=2.0.0",
    "pydantic>=2.4.0",
    "typer>=0.9.0"
]

[project.scripts]
atlas-vis = "atlas_vis.main:cli_app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "black>=23.0.0",
    "mypy>=1.5.0"
]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D", "UP", "ASYNC", "BLE", "B", "A", "C4", "T10", "ISC", "ICN", "PT", "Q", "RET", "SIM", "TID", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"]
ignore = ["D100", "D104", "D203", "D212", "E501", "TRY003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/atlas_vis --cov-report=term-missing --strict-markers -v"

[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_vis"]
package-data = {"atlas_vis.config" = ["*.yaml"]}
